--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -2,25 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\haesol\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-19T15:18:27.939635Z",
+     "start_time": "2024-11-19T15:18:13.043218Z"
     }
-   ],
+   },
    "source": [
     "import torch\n",
+    "import torchaudio\n",
     "from torch.utils.data import Dataset\n",
     "from datasets import load_dataset\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np"
-   ]
+    "import numpy as np\n"
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
